<resources>
    <string name="app_name">OpenMedRTC</string>

    <string name="menu_waiting_room">Waiting room</string>
    <string name="menu_medicals">Medicals</string>
    <string name="menu_appointments">Appointments</string>
    <string name="menu_settings">Settings</string>

    <string name="login_id">ID</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_error_input">""Wrong input""</string>
    <string name="login_error_credentials">"Wrong ID or password"</string>
    <string name="login_tag">LOGIN</string>

    <string name="waiting_note">The doctor will be here soon</string>
    <string name="waiting_room_title">In Waiting Room</string>
    <string name="waiting_button_leave">LEAVE</string>

    <string name="user_online">online</string>
    <string name="user_waiting_time_label">Estimated Waiting Time</string>
    <string name="patient_waiting_room">In Waiting Room…</string>
    <string name="name_template">%1$s %2$s %3$s</string>
    <string name="waiting_time_template">%1$d min</string>

</resources>
